tests/spec/parse/snapshots/impl_method_bodies.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  struct Counter {
    value: int,
  }
  
  impl Counter {
    fn complex_logic(self: Counter) -> int {
      let x = self.value + 1;
      let y = x * 2;
      if y > 10 {
        return y;
      }
      return x;
    }
  }
---
[
    Struct {
        doc: None,
        attributes: [],
        name: "Counter",
        name_span: Span {
            file_id: 0,
            byte_offset: 8,
            byte_length: 7,
        },
        generics: [],
        fields: Record(
            [
                StructFieldDefinition {
                    doc: None,
                    name: "value",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 20,
                        byte_length: 5,
                    },
                    annotation: Constructor {
                        name: "int",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 27,
                            byte_length: 3,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    kind: Named {
                        attributes: [],
                    },
                },
            ],
        ),
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 32,
        },
    },
    ImplBlock {
        annotation: Constructor {
            name: "Counter",
            params: [],
            span: Span {
                file_id: 0,
                byte_offset: 40,
                byte_length: 7,
            },
        },
        receiver_name: "Counter",
        methods: [
            Function {
                doc: None,
                attributes: [],
                name: "complex_logic",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 55,
                    byte_length: 13,
                },
                generics: [],
                params: [
                    Binding {
                        pattern: Identifier {
                            identifier: "self",
                            span: Span {
                                file_id: 0,
                                byte_offset: 69,
                                byte_length: 4,
                            },
                            binding: None,
                        },
                        annotation: Some(
                            Constructor {
                                name: "Counter",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 75,
                                    byte_length: 7,
                                },
                            },
                        ),
                        ty: Var {
                            id: uninferred,
                        },
                    },
                ],
                return_annotation: Constructor {
                    name: "int",
                    params: [],
                    span: Span {
                        file_id: 0,
                        byte_offset: 87,
                        byte_length: 3,
                    },
                },
                return_type: Var {
                    id: uninferred,
                },
                visibility: Private,
                body: Definition(
                    Block {
                        items: [
                            Let {
                                binding: Binding {
                                    pattern: Identifier {
                                        identifier: "x",
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 101,
                                            byte_length: 1,
                                        },
                                        binding: None,
                                    },
                                    annotation: None,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                },
                                value: Binary {
                                    operator: Addition,
                                    left: DotAccess {
                                        expression: Identifier {
                                            value: "self",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 105,
                                                byte_length: 4,
                                            },
                                            resolution: Unresolved,
                                        },
                                        member: "value",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 105,
                                            byte_length: 10,
                                        },
                                        resolution: Unresolved,
                                    },
                                    right: Literal {
                                        literal: Integer {
                                            value: 1,
                                            text: None,
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 118,
                                            byte_length: 1,
                                        },
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 105,
                                        byte_length: 14,
                                    },
                                },
                                mode: Plain,
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 97,
                                    byte_length: 22,
                                },
                            },
                            Let {
                                binding: Binding {
                                    pattern: Identifier {
                                        identifier: "y",
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 129,
                                            byte_length: 1,
                                        },
                                        binding: None,
                                    },
                                    annotation: None,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                },
                                value: Binary {
                                    operator: Multiplication,
                                    left: Identifier {
                                        value: "x",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 133,
                                            byte_length: 1,
                                        },
                                        resolution: Unresolved,
                                    },
                                    right: Literal {
                                        literal: Integer {
                                            value: 2,
                                            text: None,
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 137,
                                            byte_length: 1,
                                        },
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 133,
                                        byte_length: 5,
                                    },
                                },
                                mode: Plain,
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 125,
                                    byte_length: 13,
                                },
                            },
                            If {
                                condition: Binary {
                                    operator: GreaterThan,
                                    left: Identifier {
                                        value: "y",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 147,
                                            byte_length: 1,
                                        },
                                        resolution: Unresolved,
                                    },
                                    right: Literal {
                                        literal: Integer {
                                            value: 10,
                                            text: None,
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 151,
                                            byte_length: 2,
                                        },
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 147,
                                        byte_length: 6,
                                    },
                                },
                                consequence: Block {
                                    items: [
                                        Return {
                                            expression: Identifier {
                                                value: "y",
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 169,
                                                    byte_length: 1,
                                                },
                                                resolution: Unresolved,
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 162,
                                                byte_length: 8,
                                            },
                                        },
                                    ],
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 154,
                                        byte_length: 23,
                                    },
                                },
                                alternative: None,
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 144,
                                    byte_length: 33,
                                },
                            },
                            Return {
                                expression: Identifier {
                                    value: "x",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 189,
                                        byte_length: 1,
                                    },
                                    resolution: Unresolved,
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 182,
                                    byte_length: 8,
                                },
                            },
                        ],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 91,
                            byte_length: 104,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 52,
                    byte_length: 143,
                },
            },
        ],
        generics: [],
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 35,
            byte_length: 162,
        },
    },
]
