tests/spec/parse/snapshots/impl_method_with_params.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  struct Counter {
    value: int,
  }
  
  impl Counter {
    fn add(self: Counter, amount: int) -> int {
      return self.value + amount;
    }
  }
---
[
    Struct {
        doc: None,
        attributes: [],
        name: "Counter",
        name_span: Span {
            file_id: 0,
            byte_offset: 8,
            byte_length: 7,
        },
        generics: [],
        fields: Record(
            [
                StructFieldDefinition {
                    doc: None,
                    name: "value",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 20,
                        byte_length: 5,
                    },
                    annotation: Constructor {
                        name: "int",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 27,
                            byte_length: 3,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    kind: Named {
                        attributes: [],
                    },
                },
            ],
        ),
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 32,
        },
    },
    ImplBlock {
        annotation: Constructor {
            name: "Counter",
            params: [],
            span: Span {
                file_id: 0,
                byte_offset: 40,
                byte_length: 7,
            },
        },
        receiver_name: "Counter",
        methods: [
            Function {
                doc: None,
                attributes: [],
                name: "add",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 55,
                    byte_length: 3,
                },
                generics: [],
                params: [
                    Binding {
                        pattern: Identifier {
                            identifier: "self",
                            span: Span {
                                file_id: 0,
                                byte_offset: 59,
                                byte_length: 4,
                            },
                            binding: None,
                        },
                        annotation: Some(
                            Constructor {
                                name: "Counter",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 65,
                                    byte_length: 7,
                                },
                            },
                        ),
                        ty: Var {
                            id: uninferred,
                        },
                    },
                    Binding {
                        pattern: Identifier {
                            identifier: "amount",
                            span: Span {
                                file_id: 0,
                                byte_offset: 74,
                                byte_length: 6,
                            },
                            binding: None,
                        },
                        annotation: Some(
                            Constructor {
                                name: "int",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 82,
                                    byte_length: 3,
                                },
                            },
                        ),
                        ty: Var {
                            id: uninferred,
                        },
                    },
                ],
                return_annotation: Constructor {
                    name: "int",
                    params: [],
                    span: Span {
                        file_id: 0,
                        byte_offset: 90,
                        byte_length: 3,
                    },
                },
                return_type: Var {
                    id: uninferred,
                },
                visibility: Private,
                body: Definition(
                    Block {
                        items: [
                            Return {
                                expression: Binary {
                                    operator: Addition,
                                    left: DotAccess {
                                        expression: Identifier {
                                            value: "self",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 107,
                                                byte_length: 4,
                                            },
                                            resolution: Unresolved,
                                        },
                                        member: "value",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 107,
                                            byte_length: 10,
                                        },
                                        resolution: Unresolved,
                                    },
                                    right: Identifier {
                                        value: "amount",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 120,
                                            byte_length: 6,
                                        },
                                        resolution: Unresolved,
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 107,
                                        byte_length: 19,
                                    },
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 100,
                                    byte_length: 26,
                                },
                            },
                        ],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 94,
                            byte_length: 37,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 52,
                    byte_length: 79,
                },
            },
        ],
        generics: [],
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 35,
            byte_length: 98,
        },
    },
]
